--- a/newtekreviews/review/static/review/css/style.css
+++ b/newtekreviews/review/static/review/css/style.css
@@ -11,6 +11,14 @@ a {
     text-decoration: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: #121723;
+}
+
+p {
+    color: #121723;
+}
+
 img {
     max-width: 100%;
 }
@@ -48,7 +56,7 @@ src: local('Muller-Bold'),
 :root {
     --main-color: rgb(1, 95, 158);
     --main-color-active: rgb(1, 65, 107);
-    --main-text-color: #0f0f0f;
+    --main-text-color: #121723;
     --grey-text: #918f8f;
     --text-input-on-hover: #e7ebf0;
     --form-input-border: #ccc;
@@ -154,6 +162,17 @@ body:not(:-moz-handler-blocked) fieldset {
     justify-content: space-between;
 }
 
+.header__logo-wrapper {
+    max-width: 150px;
+}
+
+.header__logo-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
 .header__nav {
     padding: 25px;
 }
@@ -169,8 +188,21 @@ body:not(:-moz-handler-blocked) fieldset {
 }
 
 .nav__item-link {
-    font-size: 20px;
+    padding: 5px;
+    font-size: 22px;
     color: white;
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+.nav__item-link:hover {
+    color: rgb(15, 40, 56);
+}
+
+.nav__item-link:focus {
+    color: #fff;
+    background-color: #f06210;
+    border-radius: 5px;
+    outline: none;
 }
 
 .header__search-form {
@@ -204,6 +236,11 @@ body:not(:-moz-handler-blocked) fieldset {
     background-color: rgb(50, 137, 196);
 }
 
+.header__search-btn:focus {
+    background-color: #f06210;
+    outline: none;
+}
+
 .header__user-profile-link {
     font-size: 20px;
     color: white;
@@ -219,6 +256,7 @@ body:not(:-moz-handler-blocked) fieldset {
     display: inline-block;
     min-width: 120px;
     max-width: 200px;
+    transition: background-color 0.3s ease;
 }
 
 .header__profile-btn {
@@ -273,7 +311,7 @@ body:not(:-moz-handler-blocked) fieldset {
 }
 
 .about__wrapper {
-    padding: 15px;
+    padding: 20px;
     max-width: 720px;
     border-radius: 5px;
     box-shadow: 5px 5px 5px 5px rgba(206, 206, 206, 0.35);
@@ -288,6 +326,7 @@ body:not(:-moz-handler-blocked) fieldset {
 
 .about__text {
     margin: 0;
+    font-size: 20px;
     line-height: 23px;
     color: var(--main-text-color);
 }
@@ -302,7 +341,6 @@ body:not(:-moz-handler-blocked) fieldset {
 .reviews__title {
     margin: 0;
     margin-bottom: 20px;
-    padding-left: 20px;
     font-size: 32px;
     color: var(--main-text-color);
 }
