--- a/newtekreviews/templates/base.html
+++ b/newtekreviews/templates/base.html
@@ -23,7 +23,7 @@
         <div class="container header__container">
             <div class="header__logo-wrapper">
                 <a href="{% url 'review:main' %}">
-                    <img class="header__logo-img" src="{% static 'review/img/header-logo.png' %}" alt="NewTekReviews Logo">
+                    <img class="header__logo-img" src="{% static 'review/images/header-logo.jpg' %}" alt="NewTekReviews Logo">
                 </a>
             </div>
             <nav class="header__nav nav">
