--- a/newtekreviews/users/templates/users/user_login.html
+++ b/newtekreviews/users/templates/users/user_login.html
@@ -21,7 +21,45 @@
                 Don't have an account? 
                 <a class="login__register-link" href="{% url 'users:register' %}">Sign Up</a>
             </p>
+            <!-- Google Sign-In Button -->
+            <div id="buttonDiv"></div>
         </div>
     </div>
 </section>
+
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script>
+    function handleCredentialResponse(response) {
+        // Send the token to the backend
+        fetch("{% url 'users:login' %}", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/x-www-form-urlencoded",
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            body: new URLSearchParams({ token: response.credential })
+        })
+        .then(res => res.json())
+        .then(data => {
+            if (data.success) {
+                window.location.href = data.redirect_url;
+            } else {
+                alert(data.message);
+            }
+        })
+        .catch(error => console.error("Error:", error));
+    }
+
+    window.onload = function () {
+        google.accounts.id.initialize({
+            client_id: "676132462264-k5heg0dn6qr0dfn2de25v5hc4r1lgbt1.apps.googleusercontent.com",
+            callback: handleCredentialResponse
+        });
+
+        google.accounts.id.renderButton(
+            document.getElementById("buttonDiv"),
+            { theme: "outline", size: "large" }
+        );
+    };
+</script>
 {% endblock %}
